<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linea_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linea_2_forclient"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/label_moaraf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blanch"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:text="@string/label_moaraf_talab" />

                <TextView
                    android:id="@+id/id_dem_forcleint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blanch"
                    android:gravity="right"
                    android:text="" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/rl_cadre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">


                <LinearLayout

                    android:id="@+id/linear_ident"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:id="@+id/linea_moarf_dem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:id="@+id/linea9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:paddingRight="5dp">
                            >

                            <TextView
                                android:id="@+id/label_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:paddingLeft="10dp"
                                android:text="@string/label_type_demande" />

                            <TextView
                                android:id="@+id/type_dem_forcleint"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:text="" />
                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/fdh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:paddingRight="5dp">
                            >

                            <TextView
                                android:id="@+id/label_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:layout_marginTop="10dp"
                                android:paddingLeft="10dp"
                                android:text="@string/label_date_demande" />

                            <TextView
                                android:id="@+id/date_dem_forcleint"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:layout_marginTop="10dp"
                                android:text="" />
                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/statut_dem_forcleint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linea_dist"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:gravity="right|center_vertical"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/label_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:text="@string/label_distance"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/distance_dem_forcleint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linea_duree"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:gravity="right|center_vertical"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/label_duree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:text="@string/label_duree" />

                <TextView
                    android:id="@+id/duree_dem_forcleint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linea_place"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:gravity="right|center_vertical"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/place_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:text="@string/label_lieu" />
            </LinearLayout>

            <Button
                android:id="@+id/send_offre_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/red"
                android:text="@string/label_btn_listeoffre" />


        </LinearLayout>
    </RelativeLayout>
</layout>