<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
    android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:paddingRight="5dp"
                android:id="@+id/offre_num_demande"
                android:layout_height="wrap_content"
                android:text="558338"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:paddingRight="5dp"
                android:layout_height="wrap_content"
                android:text="@string/label_num_demande"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="صالح"
                android:id="@+id/fournisseur_name"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/label_arth_siir_mozawed"
                android:textSize="16sp"/>

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content">


        <TextView
            android:id="@+id/cout_offre"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="fkgjkoglkdkdgk" />


        <LinearLayout

            android:id="@+id/linear_ident"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/statu_txt"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/id_offre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="1985" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingLeft="10dp"
                        android:text="@string/label_moaraf_offre" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="5dp">


                    <TextView
                        android:id="@+id/date_offre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="12/58/1987" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingLeft="10dp"
                        android:text="@string/label_date_offre" />
                </LinearLayout>




            </LinearLayout>


        </LinearLayout>



    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
